--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="hangman">
 
 <head lang="en">
   <meta charset="UTF-8">
   <title>Hangman</title>
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -22,6 +21,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/GameboardCtrl.js"></script>
+  <script src="/scripts/services/WordFactory.js"></script>
 </body>
 
 </html>
