--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <h4>Hello, World???</h4>
+  <div ng-controller="GameboardCtrl as gameboard">
+    <button ng-click="gameboard.newGame();">New Game!</button>
+  </div>
+
   <ui-view></ui-view>
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
