--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
   <!-- Angular Route -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/GameBoardCtrl.js"></script>
   <script src="/scripts/services/WordFactory.js"></script>
