--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <!-- AngularUI Router -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  <!-- Angular Cookies -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
   <!-- bootstrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
   <!-- Angular Route -->
@@ -24,7 +26,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/GameBoardCtrl.js"></script>
+  <script src="/scripts/controllers/SignInPageCtrl.js"></script>
   <script src="/scripts/services/WordFactory.js"></script>
+  <script src="/scripts/services/UsersFactory.js"></script>
 </body>
 
 </html>
