--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers/GameBoardCtrl.js"></script>
   <script src="/scripts/controllers/SignInPageCtrl.js"></script>
+  <script src="/scripts/controllers/UserStatsCtrl.js"></script>
   <script src="/scripts/services/WordFactory.js"></script>
   <script src="/scripts/services/UsersFactory.js"></script>
 </body>
