--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,22 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Hangman</title>
+  <title>Captain Swiftknife</title>
+  <link href="https://fonts.googleapis.com/css?family=Trade+Winds" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
-
+  <div class="page-header">
+    <div>
+      <img src="https://www.telegraph.co.uk/content/dam/news/2016/11/22/blackbeard_trans_NvBQzQNjv4BqMi7XmXlS_Y-KnHwwPRarOI0Eu7qe_9Ywb4wwjdmChD4.jpg?imwidth=450" / class="captain-img" align="left">
+      <h1>Captain Swiftknife's Plank</h1>
+    </div>
+    <button type="button" class="btn btn-default navbar-btn">Instructions</button>
+    <button type="button" class="btn btn-default navbar-btn">New Game</button>
+  </div>
   <ui-view></ui-view>
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
