redesign user stats page, hide nav buttons if not signed in

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,11 @@
         </a>
       </div>
       <button type="button" class="btn btn-default navbar-btn" ui-sref="instructions">Instructions</button>
-      <button type="button" class="btn btn-default navbar-btn" ui-sref="gameBoard">New Game</button>
+      <span ng-controller="GameBoardCtrl as gameBoard" ng-hide="gameBoard.username != undefined">
+        <button type="button" class="btn btn-default navbar-btn" ui-sref="gameBoard">New Game</button>
+        <button type="button" class="btn btn-default navbar-btn" ui-sref="userStats">Yer Plunder</button>
+      </span>
+
     </div>
     <ui-view></ui-view>
     <!-- Angular -->
