--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
         </a>
       </div>
       <button type="button" class="btn btn-default navbar-btn" ui-sref="instructions">Instructions</button>
-      <span ng-controller="GameBoardCtrl as gameBoard" ng-hide="gameBoard.username != undefined">
+      <span ng-controller="GameBoardCtrl as gameBoard" ng-hide="gameBoard.username == undefined">
         <button type="button" class="btn btn-default navbar-btn" ui-sref="gameBoard">New Game</button>
         <button type="button" class="btn btn-default navbar-btn" ui-sref="userStats">Yer Plunder</button>
       </span>
