--- a/app/index.html
+++ b/app/index.html
@@ -11,42 +11,39 @@
 </head>
 
 <body>
-  <div class="background-overlay">
-    <div class="page-header">
-      <div>
-        <a href="/" class="title-text">
-          <img src="https://www.telegraph.co.uk/content/dam/news/2016/11/22/blackbeard_trans_NvBQzQNjv4BqMi7XmXlS_Y-KnHwwPRarOI0Eu7qe_9Ywb4wwjdmChD4.jpg?imwidth=450" / class="captain-img" align="left">
-          <h1>Captain Swiftknife's Plank</h1>
-        </a>
-      </div>
-      <button type="button" class="btn btn-default navbar-btn" ui-sref="instructions">Instructions</button>
-      <!-- <span ng-controller="GameBoardCtrl as gameBoard" ng-hide="gameBoard.username == undefined"> -->
-        <button type="button" class="btn btn-default navbar-btn" ui-sref="gameBoard">New Game</button>
-        <button type="button" class="btn btn-default navbar-btn" ui-sref="userStats">Yer Plunder</button>
-      <!-- </span> -->
-
-    </div>
-    <ui-view></ui-view>
-    <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <!-- AngularUI Router -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-    <!-- Angular Cookies -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
-    <!-- bootstrap -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
-    <!-- Angular Route -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="/scripts/app.js"></script>
-    <script src="/scripts/controllers/GameBoardCtrl.js"></script>
-    <script src="/scripts/controllers/SignInPageCtrl.js"></script>
-    <script src="/scripts/controllers/UserStatsCtrl.js"></script>
-    <script src="/scripts/services/WordFactory.js"></script>
-    <script src="/scripts/services/UsersFactory.js"></script>
+  <!-- Navigation Bar -->
+  <div class="page-header" ng-controller="SignInPageCtrl as signInPage">
+    <img src="https://www.telegraph.co.uk/content/dam/news/2016/11/22/blackbeard_trans_NvBQzQNjv4BqMi7XmXlS_Y-KnHwwPRarOI0Eu7qe_9Ywb4wwjdmChD4.jpg?imwidth=450" / class="captain-img" align="left">
+    <h1>Captain Swiftknife's Plank</h1>
+    <button type="button" class="btn btn-default navbar-btn" ui-sref="instructions">Instructions</button>
+    <span ng-if="signInPage.signedIn()">
+      <button type="button" class="btn btn-default navbar-btn" ui-sref="gameBoard">New Game</button>
+      <button type="button" class="btn btn-default navbar-btn" ui-sref="userStats">Yer Plunder</button>
+      <button type="button" class="btn btn-default navbar-btn" ng-click="signInPage.signOut();">Sign Out</button>
+    </span>
   </div>
+
+  <ui-view></ui-view>
+
+  <!-- Angular -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <!-- AngularUI Router -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  <!-- Angular Cookies -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
+  <!-- bootstrap -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+  <!-- Angular Route -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="/scripts/app.js"></script>
+  <script src="/scripts/controllers/GameBoardCtrl.js"></script>
+  <script src="/scripts/controllers/SignInPageCtrl.js"></script>
+  <script src="/scripts/controllers/UserStatsCtrl.js"></script>
+  <script src="/scripts/services/WordFactory.js"></script>
+  <script src="/scripts/services/UsersFactory.js"></script>
 </body>
 
 </html>
