remove console.logs

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Captain Swiftknife</title>
+  <title>Captain Swiftknife's Plank</title>
   <link href="https://fonts.googleapis.com/css?family=Trade+Winds" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css">
